# vm-manager

./: .gitignore  Cargo.toml  Makefile  VMFile.kdl
crates/vm-manager/: Cargo.toml
crates/vm-manager/src/: error.rs  lib.rs  provision.rs  ssh.rs  traits.rs  types.rs  vmfile.rs
crates/vm-manager/src/backends/: mod.rs  noop.rs  propolis.rs  qemu.rs  qmp.rs
docs/: book.toml
docs/book/: 404.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
docs/book/advanced/: containerization.html  custom-cloud-init.html  debugging.html  propolis-illumos.html  tap-networking.html
docs/book/architecture/: backends.html  crate-structure.html  error-handling.html  overview.html  ssh.html  state-management.html
docs/book/cli/: console.html  create.html  destroy.html  down.html  image.html  list.html  log.html  provision.html  reload.html  resume.html  ssh.html  start.html  status.html  stop.html  suspend.html  up.html  vmctl.html
docs/book/concepts/: cloud-init-ssh.html  how-it-works.html  image-management.html  imperative-vs-declarative.html  networking.html  vm-lifecycle.html
docs/book/getting-started/: installation.html  prerequisites.html  quick-start.html
docs/book/tutorials/: declarative-workflow.html  imperative-vm.html  omnios-builder.html  provisioning.html
docs/book/vmfile/: cloud-init.html  full-example.html  image-sources.html  multi-vm.html  network.html  overview.html  provision.html  resources.html  ssh.html  vm-block.html
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: containerization.md  custom-cloud-init.md  debugging.md  propolis-illumos.md  tap-networking.md
docs/src/architecture/: backends.md  crate-structure.md  error-handling.md  overview.md  ssh.md  state-management.md
docs/src/cli/: console.md  create.md  destroy.md  down.md  (+13 more)
scripts/: bootstrap-omnios.sh  install-forger.sh  pack-forger.sh
(+35 files in other folders)
