[package]
name = "vm-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
pure-iso = ["dep:isobemak"]

[dependencies]
tokio.workspace = true
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true
tempfile.workspace = true
futures-util.workspace = true
zstd.workspace = true
dirs.workspace = true
kdl.workspace = true

# Optional pure-Rust ISO generation
isobemak = { version = "0.2", optional = true }

# SSH
ssh2 = "0.9"
ssh-key.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "illumos")'.dependencies]
tokio-tungstenite = "0.26"
